Pre-Alpha: add page logic and migrate code

--- a/JS/To-Do-List/src/index.html
+++ b/JS/To-Do-List/src/index.html
@@ -46,14 +46,14 @@
         <div class="main-mid">
           <h1>Projects</h1>
           <ul class="projects">
-            <li>
-              <h2>A</h2>
+            <li id="personal" class="main-groups">
+              <h2>Personal</h2>
             </li>
-            <li>
-              <h2>B</h2>
+            <li id="professional" class="main-groups">
+              <h2>Professional</h2>
             </li>
-            <li>
-              <h2>C</h2>
+            <li id="miscellaneous" class="main-groups">
+              <h2>Miscellaneous</h2>
             </li>
           </ul>
         </div>
@@ -240,6 +240,93 @@
             -->
           </div>
       </div>
+
+      <div class="personal-page hidden">
+        <header>
+          <h1>Personal</h1>
+        </header>
+
+        <main class="content-main">
+          <div class="content-list">
+            <!--
+            <div class="content-list-item-card">
+              <h2>Title: Task 1</h2>
+              <p>Due Date: Jan 25th</p>
+              <div class="content-list-item-card-buttons">
+                <button class="edit-task-button">Edit</button>
+                <button class="delete-task-button">Delete</button>
+              </div>
+            </div>
+
+            <div class="content-list-item-card">
+              <h2>Title: Task 1</h2>
+              <p>Due Date: Jan 25th</p>
+              <div class="content-list-item-card-buttons">
+                <button class="edit-task-button">Edit</button>
+                <button class="delete-task-button">Delete</button>
+              </div>
+            </div>
+            -->
+          </div>
+      </div>
+
+      <div class="professional-page hidden">
+        <header>
+          <h1>Professional</h1>
+        </header>
+
+        <main class="content-main">
+          <div class="content-list">
+            <!--
+            <div class="content-list-item-card">
+              <h2>Title: Task 1</h2>
+              <p>Due Date: Jan 25th</p>
+              <div class="content-list-item-card-buttons">
+                <button class="edit-task-button">Edit</button>
+                <button class="delete-task-button">Delete</button>
+              </div>
+            </div>
+
+            <div class="content-list-item-card">
+              <h2>Title: Task 1</h2>
+              <p>Due Date: Jan 25th</p>
+              <div class="content-list-item-card-buttons">
+                <button class="edit-task-button">Edit</button>
+                <button class="delete-task-button">Delete</button>
+              </div>
+            </div>
+            -->
+          </div>
+      </div>
+
+      <div class="miscellaneous-page hidden">
+        <header>
+          <h1>Miscellaneous</h1>
+        </header>
+
+        <main class="content-main">
+          <div class="content-list">
+            <!--
+            <div class="content-list-item-card">
+              <h2>Title: Task 1</h2>
+              <p>Due Date: Jan 25th</p>
+              <div class="content-list-item-card-buttons">
+                <button class="edit-task-button">Edit</button>
+                <button class="delete-task-button">Delete</button>
+              </div>
+            </div>
+
+            <div class="content-list-item-card">
+              <h2>Title: Task 1</h2>
+              <p>Due Date: Jan 25th</p>
+              <div class="content-list-item-card-buttons">
+                <button class="edit-task-button">Edit</button>
+                <button class="delete-task-button">Delete</button>
+              </div>
+            </div>
+            -->
+          </div>
+      </div>
     </div>
     <div class="add-task invisible">
       <form action="">
@@ -256,7 +343,11 @@
         <label for="taskProject">
           <h3>Project:</h3>
         </label>
-        <input type="text" id="taskProject" name="taskProject" placeholder="Enter project name">
+        <select name="taskPriority" id="taskPriority">
+          <option value="personal">Personal</option>
+          <option value="professional">Professional</option>
+          <option value="miscellaneous">Miscellaneous</option>
+        </select>
         <label for="taskDueDate">
           <h3>Due Date</h3>
         </label>
@@ -292,7 +383,11 @@
         <label for="taskProject">
           <h3>Project:</h3>
         </label>
-        <input type="text" id="taskProject" name="taskProject" placeholder="Enter project name">
+        <select name="taskPriority" id="taskPriority">
+          <option value="personal">Personal</option>
+          <option value="professional">Professional</option>
+          <option value="miscellaneous">Miscellaneous</option>
+        </select>
         <label for="taskDueDate">
           <h3>Due Date</h3>
         </label>
